# Calculator

./: '  .README  .gitmodules  CMakeLists.txt  README.md
.cache/clangd/index/: Button.cpp.CDF8D79A4EF903A3.idx  Button.h.EA4253A9AAAD31FB.idx  CalculatorApp.cpp.87CFDF007F4946E9.idx  CalculatorApp.h.0B99550807FCCDBF.idx  CalculatorEngine.cpp.C9FE355BED2A3A70.idx  CalculatorEngine.h.B64CB585FB208306.idx  Event.cpp.976551C6CEF7ADB5.idx  Event.h.227AC8F26DBF9F9E.idx  Frame.cpp.AC6740949E4DD1DD.idx  Frame.h.D531D8F53874BB6E.idx  GUIElement.cpp.757B8DF4BBB66284.idx  GUIElement.h.5D2B1F3679205236.idx  SDL.h.0285B01CE8210529.idx  SDL_assert.h.28C26E1938693EE0.idx  SDL_asyncio.h.F601B2AF711FD662.idx  SDL_atomic.h.367C001C00484CD7.idx  SDL_audio.h.44BCA95CC5E32ED3.idx  SDL_begin_code.h.148F2E5FB96176DE.idx  SDL_bits.h.FDDCBB3C1E2AFE1A.idx  SDL_blendmode.h.6EB4F08481D579CD.idx  SDL_camera.h.9C6E92FD2C10C57B.idx  SDL_clipboard.h.E64AA9F7E4AECC0B.idx  SDL_close_code.h.5A8B39E367F1F928.idx  SDL_cpuinfo.h.1B6FD80864D532F6.idx  SDL_dialog.h.EFEAFF63E43939C7.idx  SDL_endian.h.EB82F4ED39A97C3F.idx  SDL_error.h.4EBABFD86A9CCE44.idx  SDL_events.h.CE3D6158FBF8F729.idx  SDL_filesystem.h.22C2826B9A5246AD.idx  SDL_gamepad.h.ADAD49357679F7F0.idx  SDL_gpu.h.8C3253315A549C2E.idx  SDL_guid.h.8DF2D4999B05997E.idx  SDL_haptic.h.AED181397EE35D16.idx  SDL_hidapi.h.88E52DF65E8BAB3E.idx  SDL_hints.h.62966385F348866C.idx  SDL_init.h.C0D5F3B763D7DCF8.idx  SDL_iostream.h.82BA50394A0F5D59.idx  SDL_joystick.h.53E59B60567D7994.idx  SDL_keyboard.h.723E22C666CEA68E.idx  SDL_keycode.h.2DDD6607E1755398.idx  (+97 more)
Biuld/: CMakeCache.txt  Makefile  cmake_install.cmake
Biuld/lib/SDL2/: Makefile  SDL3headersTargets.cmake  SDL3sharedTargets.cmake  SDL3testTargets.cmake  cmake_install.cmake
Biuld/lib/googletest/: CTestTestfile.cmake  (+2 more)
Biuld/src/: Makefile  calculator  cmake_install.cmake
Biuld/tests/: CTestTestfile.cmake  Makefile  calculator_tests  cmake_install.cmake
include/: Button.h  CalculatorApp.h  CalculatorEngine.h  Frame.h  GUIElement.h  Text.h
src/: Button.cpp  CMakeLists.txt  CalculatorApp.cpp  CalculatorEngine.cpp  Event.cpp  Frame.cpp  GUIElement.cpp  Text.cpp  main.cpp
tests/: CMakeLists.txt  button_test.cpp  calculator_logic_test.cpp  font_test.cpp  frame_test.cpp
(+7 files in other folders)
